# RFM-Grasp

./: .gitignore  README.md  conditional-flow-matching.ipynb  environment.yaml  environment.yml  ferdy.ipynb  models.py  pyproject.toml  so3_condflowmatcher.py
franka_bullet/models/: 1Shelves_4075b78276e39db2f59ac8a5783023e7_0.003873753800979896.h5
franka_bullet/src/: grasp_tester.py  main.py  panda_base.py  robot copy 2.py  robot copy.py  robot.py  robot2.py  utils.py
scripts/: __init__.py  ali.py  ali_1000_files.py  analysis.ipynb  conditional-flow-matching.ipynb  conditional-flow-matching_cpu.ipynb  conditional-flow-matching_new.ipynb  ferdy.ipynb  ferdy.py  ferdy_evaluation.ipynb  ferdy_evaluation.py  generate_grasp.py  sanity_mlp.py  sanity_transformer.py  show_generated_grasp.py  show_grasp.py  test.py  train_mlp.py  validate_grasp.py
sefmp/: __init__.py
sefmp/configs/: sanity_check.yaml  visualize.yaml
sefmp/core/: train.py  utils.py  visualize.py
sefmp/data/: acronym.py  data_manager.py  data_structures.py  dataset.py  grasp_dataset.py  visualizer.py
sefmp/models/: f_SO3FM.py  losses.py  models.py  pmlp.py  r3fm.py  r3mlp.py  se3fm_pl.py  se3lightning.py  so3_condflowmatcher.py  so3_helpers.py  so3fm.py  tested_train.py  wasserstein.py
src/core/: config.py  train.py  visualize.py
src/data/: data_manager.py  dataset.py  grasp_dataset.py  grasp_dataset32.py  util.py
src/models/: __init__.py  flow.py  fm_r3.py  fm_se3.py  fm_so3.py  lightning.py  old_pl.py  old_r3fm.py  old_so3_condflowmatcher.py  pl_mlp.py  pl_se3.py  r3fm.py  sdf_encoder.py  (+7 more)
(+2 files in other folders)
