[project]
name = "adlr"
version = "0.1.0"
description = "Cool machine learning!"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "einops>=0.8.0",
    "geomstats[pytorch]>=2.8.0",
    "h5py>=3.12.1",
    "mesh2sdf>=1.1.0",
    "pot>=0.9.5",
    "pyglet<2",
    "pytorch-lightning>=2.4.0",
    "scipy>=1.14.1",
    "torch>=2.5.1",
    "trimesh>=4.5.3",
    "wandb>=0.19.1",
]
